--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
   },
   "dependencies": {
     "@jimengio/rex": "^0.1.8",
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.7.3",
     "@react-navigation/native": "^5.7.2",
     "@react-navigation/stack": "^5.8.0",
+    "@types/humanize-duration": "^3.18.0",
     "cron-parser": "^2.15.0",
-    "cryptojs": "^2.5.3",
+    "cronstrue": "^1.96.0",
+    "dayjs": "^1.8.31",
+    "humanize-duration": "^3.23.1",
     "immer": "^7.0.7",
+    "ipfs": "^0.48.1",
+    "orbit-db": "^0.24.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-native": "0.62.2",
