--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -7,7 +7,11 @@
     "jsx": "react",
     "lib": ["es6", "dom"],
     "moduleResolution": "node",
-    "strict": true
+    "strict": true,
+    "baseUrl": "./",
+    "paths": {
+      "*": ["*", "*.web"]
+    }
   },
   "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js"]
 }
