--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "orbit-db": "^0.24.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.3.0",
     "react-native": "0.62.2",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^2.1.0",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-i18n": "^2.0.15",
