--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "cronstrue": "^1.96.0",
     "dayjs": "^1.8.31",
     "immer": "^7.0.7",
-    "ipfs": "^0.48.1",
+    "ipfs": "~0.46",
+    "nanoid": "^3.1.12",
     "orbit-db": "^0.24.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
