--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -8,7 +8,7 @@
     "lib": ["es6", "dom"],
     "moduleResolution": "node",
     "strict": true,
-    "baseUrl": "./",
+    "baseUrl": "../",
     "paths": {
       "*": ["*", "*.web"]
     }
