--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dayjs": "^1.8.31",
     "immer": "^7.0.7",
     "ipfs": "~0.46",
+    "lodash": "^4.17.19",
     "nanoid": "^3.1.12",
     "orbit-db": "^0.24.2",
     "react": "^16.13.1",
@@ -48,6 +49,7 @@
     "@react-native-community/eslint-config": "^1.0.0",
     "@types/cryptojs": "^3.1.29",
     "@types/jest": "^24.0.24",
+    "@types/lodash": "^4.14.159",
     "@types/react-dom": "^16.9.8",
     "@types/react-native": "^0.62.0",
     "@types/react-native-i18n": "^2.0.0",
