--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.3.0",
     "react-native": "0.62.2",
+    "react-native-background-fetch": "^3.1.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^2.1.0",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-i18n": "^2.0.15",
+    "react-native-notifications": "^3.3.2",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-safe-area-view": "^1.1.1",
