--- a/package.json
+++ b/package.json
@@ -26,15 +26,16 @@
     "ipfs": "~0.46",
     "lodash": "^4.17.19",
     "nanoid": "^3.1.12",
+    "nodejs-mobile-react-native": "^0.6.1",
     "orbit-db": "^0.24.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.3.0",
-    "react-native": "0.62.2",
+    "react-native": "^0.63.2",
     "react-native-background-fetch": "^3.1.0",
-    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^2.1.0",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-get-random-values": "^1.4.0",
     "react-native-i18n": "^2.0.15",
     "react-native-notifications": "^3.3.2",
     "react-native-reanimated": "^1.10.1",
