refactor orbit db

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "orbit": "webpack-dev-server --config orbit-db-web/webpack.config.js --watch",
+    "orbit:build": "rm -rf orbit-db-web/dist && NODE_ENV=production webpack --config orbit-db-web/webpack.config.js",
     "web": "webpack-dev-server --config web/webpack.config.js --watch",
     "web:build": "NODE_ENV=production webpack --config web/webpack.config.js",
     "start": "react-native start",
@@ -12,65 +14,59 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@jimengio/rex": "^0.1.8",
-    "@react-native-community/async-storage": "^1.11.0",
+    "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/bottom-tabs": "^5.7.3",
-    "@react-navigation/native": "^5.7.2",
-    "@react-navigation/stack": "^5.8.0",
-    "@types/humanize-duration": "^3.18.0",
-    "cron-parser": "^2.15.0",
+    "@react-navigation/bottom-tabs": "^5.8.0",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
+    "cron-parser": "^2.16.3",
     "cronstrue": "^1.96.0",
-    "dayjs": "^1.8.31",
+    "dayjs": "^1.8.34",
     "immer": "^7.0.7",
     "ipfs": "~0.46",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.20",
     "nanoid": "^3.1.12",
-    "nodejs-mobile-react-native": "^0.6.1",
-    "orbit-db": "^0.24.2",
-    "react": "^16.13.1",
+    "orbit-db": "^0.25.1",
+    "react": "16.13.1",
     "react-dom": "^16.13.1",
-    "react-hook-form": "^6.3.0",
-    "react-native": "^0.63.2",
+    "react-hook-form": "^6.5.0",
+    "react-native": "0.63.2",
     "react-native-background-fetch": "^3.1.0",
-    "react-native-elements": "^2.1.0",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-get-random-values": "^1.4.0",
     "react-native-i18n": "^2.0.15",
     "react-native-notifications": "^3.3.2",
-    "react-native-reanimated": "^1.10.1",
-    "react-native-safe-area-context": "^3.1.1",
-    "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "^2.9.0",
-    "react-native-sortable-list": "^0.0.24",
-    "react-native-vector-icons": "^7.0.0"
+    "react-native-reanimated": "^1.13.0",
+    "react-native-safe-area-context": "^3.1.6",
+    "react-native-screens": "^2.10.1",
+    "react-native-vector-icons": "^7.0.0",
+    "react-native-webview": "^10.8.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
-    "@babel/runtime": "^7.6.2",
-    "@react-native-community/eslint-config": "^1.0.0",
-    "@types/cryptojs": "^3.1.29",
-    "@types/jest": "^24.0.24",
+    "@babel/core": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
+    "@react-native-community/eslint-config": "^1.1.0",
+    "@types/jest": "^25.2.3",
     "@types/lodash": "^4.14.159",
     "@types/react-dom": "^16.9.8",
-    "@types/react-native": "^0.62.0",
+    "@types/react-native": "^0.63.2",
     "@types/react-native-i18n": "^2.0.0",
-    "@types/react-native-sortable-list": "^0.0.9",
-    "@types/react-test-renderer": "16.9.2",
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
-    "@typescript-eslint/parser": "^2.25.0",
-    "babel-jest": "^24.9.0",
+    "@types/react-native-vector-icons": "^6.4.5",
+    "@types/react-test-renderer": "^16.9.2",
+    "@typescript-eslint/eslint-plugin": "^2.27.0",
+    "@typescript-eslint/parser": "^2.27.0",
+    "babel-jest": "^25.1.0",
     "babel-loader": "^8.1.0",
+    "copy-webpack-plugin": "^6.0.4",
     "eslint": "^6.5.1",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
-    "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.58.0",
-    "prettier": "^2.0.2",
-    "react-native-web": "^0.13.4",
-    "react-test-renderer": "16.11.0",
-    "ts-loader": "^8.0.1",
+    "jest": "^25.1.0",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "prettier": "^2.0.5",
+    "react-native-web": "^0.13.8",
+    "react-test-renderer": "16.13.1",
+    "ts-loader": "^8.0.2",
     "typescript": "^3.8.3",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
