--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,10 @@
       "*": ["*", "*.web", "*.native", "*.ios", "*.android"]
     }
   },
-  "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js"]
+  "exclude": [
+    "node_modules",
+    "babel.config.js",
+    "metro.config.js",
+    "jest.config.js"
+  ]
 }
