--- a/orbit-db-web/package.json
+++ b/orbit-db-web/package.json
@@ -8,8 +8,14 @@
     "build": "rm -rf orbit-db && NODE_ENV=production webpack --config webpack.config.js"
   },
   "dependencies": {
-    "ipfs": "~0.46",
+    "ipfs": "0.46.0",
     "orbit-db": "^0.25.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "ts-loader": "^8.0.3",
+    "typescript": "^4.0.2",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
+  }
 }
