--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "react-native-safe-area-context": "^3.1.6",
     "react-native-screens": "^2.10.1",
     "react-native-vector-icons": "^7.0.0",
-    "react-native-webview": "^10.8.2",
-    "vconsole": "^3.3.4"
+    "react-native-webview": "^10.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
