--- a/package.json
+++ b/package.json
@@ -20,17 +20,19 @@
     "cron-parser": "^2.16.3",
     "cronstrue": "^1.96.0",
     "dayjs": "^1.8.34",
+    "expo-localization": "^8.2.1",
+    "i18next": "^19.7.0",
     "immer": "^7.0.7",
     "lodash": "^4.17.20",
     "nanoid": "^3.1.12",
     "react": "16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.5.0",
+    "react-i18next": "^11.7.2",
     "react-native": "0.63.2",
     "react-native-background-fetch": "^3.1.0",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-get-random-values": "^1.4.0",
-    "react-native-i18n": "^2.0.15",
     "react-native-notifications": "^3.3.2",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.6",
@@ -46,7 +48,6 @@
     "@types/lodash": "^4.14.159",
     "@types/react-dom": "^16.9.8",
     "@types/react-native": "^0.63.2",
-    "@types/react-native-i18n": "^2.0.0",
     "@types/react-native-vector-icons": "^6.4.5",
     "@types/react-test-renderer": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
