--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "cron-parser": "^2.16.3",
     "cronstrue": "^1.96.0",
     "dayjs": "^1.8.34",
-    "expo-localization": "^8.2.1",
     "i18next": "^19.7.0",
     "immer": "^7.0.7",
     "lodash": "^4.17.20",
@@ -33,6 +32,7 @@
     "react-native-background-fetch": "^3.1.0",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-get-random-values": "^1.4.0",
+    "react-native-localize": "^1.4.1",
     "react-native-notifications": "^3.3.2",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.6",
