--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/push-notification-ios": "^1.4.1",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
@@ -33,12 +34,12 @@
     "react-native-gesture-handler": "^1.7.0",
     "react-native-get-random-values": "^1.4.0",
     "react-native-localize": "^1.4.1",
-    "react-native-notifications": "^3.3.2",
+    "react-native-push-notification": "^5.1.0",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.6",
     "react-native-screens": "^2.10.1",
     "react-native-vector-icons": "^7.0.0",
-    "react-native-webview": "^10.8.2",
+    "react-native-webview": "^10.8.3",
     "uniqolor": "^1.0.1"
   },
   "devDependencies": {
@@ -49,6 +50,7 @@
     "@types/lodash": "^4.14.159",
     "@types/react-dom": "^16.9.8",
     "@types/react-native": "^0.63.2",
+    "@types/react-native-push-notification": "^5.0.1",
     "@types/react-native-vector-icons": "^6.4.5",
     "@types/react-test-renderer": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
