--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.6",
     "react-native-screens": "^2.10.1",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^7.0.0",
     "react-native-webview": "^10.8.3",
     "uniqolor": "^1.0.1"
