--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "immer": "^7.0.7",
     "lodash": "^4.17.20",
     "nanoid": "^3.1.12",
+    "pcron": "0.0.6",
     "react": "16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.5.0",
